# nersemble-data

./: README.md  pyproject.toml
scripts/: manage_data.py
src/nersemble_data/: constants.py  env.py
src/nersemble_data/data/: nersemble_data.py
src/nersemble_data/scripts/: manage_data.py
src/nersemble_data/util/: color_correction.py  download.py  metadata.py  security.py  video.py
