[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nersemble_data"
version = "0.0.1"
description = "Official download kit for the NeRSemble multi-view video face dataset"
authors = [
    { name = "Tobias Kirschstein", email = "tobias.kirschstein@gmail.com" },
]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
# urls = { Documentation = "<<<ENTER_LINK_TO_DOCUMENTATION>>>" }
# Main dependencies
dependencies = [
    "tyro",
    "environs",
    "elias",
    "tqdm",
    "colour-science"
]

[project.optional-dependencies]
# Development packages, install via <<<PROJECT_NAME>>>[dev]
dev = [
]

[project.scripts]
nersemble-data = "nersemble_data.scripts.manage_data:main_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nersemble_data*"]  # Keep the '*', otherwise submodules are not found